4. Creating CodePipeline and use these files/code/kube-manifests/1. deployment of application image with replicaset.yaml
# # declaring multiple containers will result in multiple contaienrs in a single pod.
# # as we in regular create each cotnaienr/pod, so we weill write 2 deployments.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
      - image: CONTAINER_IMAGE
        imagePullPolicy: Always
        name: app-2048
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-2048-1
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048-1
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048-1
    spec:
      containers:
      - image: public.ecr.aws/docker/library/httpd:latest
        imagePullPolicy: Always
        name: app-2048-1
        ports:
        - containerPort: 80
