4. Creating CodePipeline and use these files/code/kube-manifests/2. now exposing all application pods with nodeport service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: nodeport-service-for-web-application-container-1
# spec:
#   ports:
#     - port: 80
#       targetPort: 80
#       protocol: TCP
#   type: NodePort
#   selector:
#     app: web-application-label-for-container-1
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nodeport-service-for-web-application-container-2
# spec:
#   ports:
#     - port: 80
#       targetPort: 80
#       protocol: TCP
#   type: NodePort
#   selector:
#     app: web-application-label-for-container-2

apiVersion: v1
kind: Service
metadata:
  name: service-2048
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048

---
apiVersion: v1
kind: Service
metadata:
  name: service-2048-1
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048-1
